Enabling OSL breaks Vector Transform node #46407

Closed
opened 2015-10-07 15:45:10 +02:00 by Seth L. · 9 comments

System Information
OS X Yosemite 10.10.1
Processor: 2.8 GHz Intel Core i7
Memory: 8 GB 1067 MHz DDR3
Graphics: ATI Radeon HD 4850 512 MB

Blender Version
Broken: 2.76 rc3 Hash:fb78f6d Branch:master(modified) 2015-09-30 16:05
Worked: unknown (was also broken in 2.75)

Short description of error
Enabling Open Shading Language in the Render context causes the Vector Transform node to return incorrect results.

Exact steps for others to reproduce the error

  1. Create a Cycles material that relies on the Vector Transform node
  2. Enable OSL and watch it break.

Here is a .blend I've prepared that can be used to test this quickly.

**System Information** OS X Yosemite 10.10.1 Processor: 2.8 GHz Intel Core i7 Memory: 8 GB 1067 MHz DDR3 Graphics: ATI Radeon HD 4850 512 MB **Blender Version** Broken: 2.76 rc3 Hash:fb78f6d Branch:master(modified) 2015-09-30 16:05 Worked: unknown (was also broken in 2.75) **Short description of error** Enabling Open Shading Language in the Render context causes the Vector Transform node to return incorrect results. **Exact steps for others to reproduce the error** 1. Create a Cycles material that relies on the Vector Transform node 2. Enable OSL and watch it break. Here is [a .blend ](https://dl.dropboxusercontent.com/u/686388/posts/blenderbugreports/enabling_osl_breaks_vector_transform_node.blend) I've prepared that can be used to test this quickly.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Confirmed, transform spaces is an OSL built-in, needs some further investigation.

Confirmed, transform spaces is an OSL built-in, needs some further investigation.

This issue was referenced by 7083423eb4

This issue was referenced by 7083423eb40705edf4ae093b820b76e7cc339406

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Rock on! Thanks!

Rock on! Thanks!

This issue was referenced by blender/cycles@faa72e97d3

This issue was referenced by blender/cycles@faa72e97d362d78a853d7c72c13fcb8c9c9dae15
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46407
No description provided.