Fix T46407: Enabling OSL breaks Vector Transform node